# tss

./: .gitignore  README.md
chatting/: Cargo.toml
chatting/src/: lib.rs  utils.rs
tss/: Cargo.toml  README.md
tss/.cargo/: config.toml
tss/src/: lib.rs  provider.rs  transaction.rs  utils.rs
tss/src/client/: mod.rs
vss/: Cargo.toml
vss/examples/: integration.rs
vss/src/: lib.rs
vss/src/generate/: mod.rs  polynomial.rs  polynomials.rs
vss/src/recovery/: verify.rs
vss/src/setup/: mod.rs
