[package]
name = "tss"
version = "0.8.1"
edition = "2018"

[dependencies]
multi-party-ecdsa = "=0.8.1"
serde = { version = "1.0", features = ["derive"] }
criterion = "0.3"
aes-gcm = "0.9.4"
hex = "0.4"
tokio = { version = "1", default-features = false, features = ["macros"] }
futures = "0.3"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
reqwest = { version = "0.9", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
rand = "0.8"
surf = "2"
async-sse = "5"
anyhow = "1"
structopt = "0.3"
secp256k1 = { version = "0.20", features = ["global-context"]}
ethers = { version = "2.0", features = ["ws", "rustls"] }
thiserror = "1.0.23"
round-based = { version = "0.1.4", features = ["dev"] }
curv-kzen = { version = "0.9", default-features = false }
dotenv = "0.15.0"

